@@ -1,16 +1,20 @@
 # rustique-v3
-
 Aplicacion desarrollada en Java para galeria de arte y taller de enmarcado. En la misma se puede:
 * Mantener una base de datos de distintos tipos de obras de arte, indicando precio, nombre, autor y foto.
 * Mantener una base de datos para clientes, indicando nombre y saldo.
 * Mantener una base de datos para trabajos a realizar, indicando cliente y comentarios de dicho trabajo.
 * Usar un display de imagenes, en el cual se puede apreciar todas las imagenes subidas.
-
-Requisitos:
-* JDK 11 o mayor
-* javaFX
-* sqlite
+## Requisitos:
+* Java 13 
+* JavaFX SDK 11.0.2 ó 13.0.2
+* SQLite
 * commons.io
+## Instrucciones
+### Linux
+* ```git clone https://github.com/sarquis88/rustique-v3```
+* ```cd rustique-v3```  
+* ```chown -R user src/rustique/bdd/```
+* ```java --module-path /path/to/javafx-sdk-VERSION/lib --add-modules=javafx.controls -jar out/artifacts/rustique_v3_jar/rustique-v3.jar```
 ## Imágenes
 ![Inicio](https://github.com/sarquis88/rustique-v3/blob/master/rustique0.png)
 ![Clientes](https://github.com/sarquis88/rustique-v3/blob/master/rustique1.png)
